@startuml robot_classdiagram

hide methods

' robot individual
class Robot
hide Robot members
class Cortex {
    network: Graph
    datasheet: Datasheet
    wires: Dict[str, Any]
    working_range: Tuple[float, float]
}
class EPuck {
    run_frequency: Frequency
}
class Fiber
class Pyramid {
    sensitivity: float
}
class Thalamus {
    multiplier: Dict[str, float]
}

' components
class Motor
class Sensor
class GroundSensor
class IRSensor

Robot o-- Cortex
Robot o-- EPuck
Robot o-- Pyramid
Robot o-- Thalamus

EPuck *-- Sensor
EPuck *-- Motor

Pyramid *-- Fiber
Thalamus *-- Fiber

Sensor <|-- GroundSensor
Sensor <|-- IRSensor

hide Fiber members

hide Motor members
hide Sensor members
hide GroundSensor members
hide IRSensor members

@enduml
